--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 </div>
                 <h5 class="text-center my-3">Tasks</h5>
                 <form class="d-flex mb-4" role="search">
-                    <input id="searchTxt" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-                    <button class="btn btn-outline-primary px-2 py-1" type="submit">
+                    <input id="search" class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+                    <button id="searchBtn" class=" btn btn-outline-primary px-2 py-1" type="submit">
                         Search
                     </button>
                 </form>
